tests/errors/binding/param.fil
comp Add<G:1>() -> () where #W > 10 {}